--- a/pages/productos.html
+++ b/pages/productos.html
@@ -46,8 +46,11 @@
       <div class="container-fluid d-flex justify-content-center mb-3 mt-3">
         <h1>Productos</h1>
       </div>
-        <section class="row align-items-center justify-content-evenly" id="contenedorProductos">
-        </section>
+      <div class="container-fluid d-flex justify-content-center text-center p-0">
+        <h4 class="col-12 col-md-8">Para poder adquirir alguno de los productos podes comunicarte a blabla@blabla.com o por WhtasApp al 11 1111-1111</h4> 
+      </div>
+      <section class="row align-items-center justify-content-evenly" id="contenedorProductos">
+      </section>
     </main>
     <footer>
       <!-- FooterLarge -->
