--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -43,6 +43,8 @@
       </nav>
     </header>
     <main class="container-fluid d-flex flex-column align-items-center mt-2 p-0 mainPlantel">
+      <!-- Contenedor "Separador" -->
+      <div class="contenedorSeparador"></div>
       <h1>Plantel</h1>
       <section class="col-12 col-md-9 my-3 mx-3">
         <img src="../media/Plantel/plantelCompleto.jpg" class="fotoPlantel" alt="Imágen del plantel completo, cuerpo técnico, médico y jugadores">
