--- a/index.html
+++ b/index.html
@@ -707,6 +707,67 @@
             </div>
           </div>
         </article>
+        <!-- Contenedor "Separador" -->
+        <div class="contenedorSeparador"></div>
+        <!-- Comprar Entradas -->
+        <article class="article21Bis container-fluid d-flex flex-column justify-content-center align-items-center p-0 pb-2">
+          <div class="col text-center tituloEntradas">
+            <h1>Comprar Entradas</h1>
+          </div>
+          <a href="https://www.basquet.id/" target="_blank">
+            <div class="col text-center logoBasquetId">
+              <svg id="Capa_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 132.45 31.97">
+                <rect width="17.68%" height="80%" y="20%" id="rectSvg"/>
+                <g id="Capa_1-2" data-name="Capa_1">
+                  <g>
+                    <g>
+                      <path class="cls-1" d="M33.66,25.03V8.12h4.41c.72,0,1.41.06,2.06.17.65.11,1.22.32,1.72.64.5.31.89.76,1.18,1.34s.43,1.34.43,2.29c0,.68-.1,1.26-.3,1.72-.2.47-.49.84-.86,1.12-.37.28-.81.47-1.33.56.65.08,1.2.3,1.65.64s.78.8,1.01,1.37c.23.57.34,1.26.34,2.07,0,.88-.12,1.63-.34,2.27-.23.63-.56,1.15-.99,1.56s-.96.7-1.6.9c-.63.2-1.36.29-2.18.29h-5.2ZM37.39,14.88h.73c.57,0,1-.09,1.29-.26.29-.17.49-.43.6-.76.1-.33.16-.74.16-1.21,0-.45-.08-.82-.24-1.12s-.4-.53-.71-.68-.71-.23-1.18-.23h-.65v4.26ZM37.39,22.42h.79c.82,0,1.39-.21,1.7-.63.31-.42.47-1.03.47-1.84,0-.64-.07-1.15-.21-1.52-.14-.38-.37-.65-.69-.83-.32-.17-.75-.26-1.29-.26h-.77v5.07Z"/>
+                      <path class="cls-1" d="M45.08,25.03l3.2-16.92h4.26l3.15,16.92h-3.45l-.56-3.57h-2.49l-.58,3.57h-3.53ZM49.53,19.23h1.8l-.9-6.6-.9,6.6Z"/>
+                      <path class="cls-1" d="M61.72,25.28c-1.06,0-1.94-.19-2.65-.56-.71-.38-1.25-.96-1.61-1.74-.36-.79-.56-1.81-.61-3.06l3.2-.48c.01.72.08,1.31.2,1.75.12.45.29.77.5.96s.48.29.78.29c.39,0,.64-.13.76-.4.12-.26.18-.54.18-.84,0-.7-.17-1.28-.5-1.76-.33-.48-.79-.96-1.36-1.45l-1.46-1.27c-.64-.54-1.18-1.16-1.62-1.85-.44-.69-.66-1.54-.66-2.56,0-1.43.42-2.53,1.27-3.29.85-.76,2-1.14,3.47-1.14.9,0,1.63.15,2.18.46.55.31.97.71,1.25,1.2.29.49.48,1.02.58,1.57.1.55.16,1.08.18,1.58l-3.22.4c-.01-.5-.05-.94-.09-1.31-.05-.37-.15-.65-.3-.86-.15-.2-.39-.3-.71-.3-.35,0-.6.15-.76.44-.16.29-.24.58-.24.88,0,.63.15,1.14.45,1.53.3.4.69.81,1.18,1.24l1.4,1.23c.74.63,1.36,1.34,1.87,2.13.51.79.76,1.77.76,2.94,0,.79-.18,1.51-.54,2.16s-.87,1.16-1.53,1.53c-.66.38-1.45.56-2.35.56Z"/>
+                      <path class="cls-1" d="M76.63,28.35c-.31-.14-.68-.37-1.11-.68-.43-.31-.86-.68-1.28-1.11-.42-.43-.78-.86-1.08-1.31-.06.01-.11.02-.17.02h-.19c-1.27,0-2.27-.22-3.01-.67-.74-.45-1.27-1.09-1.59-1.92-.32-.84-.48-1.83-.48-2.99v-6.29c0-1.17.16-2.16.48-2.99.32-.82.85-1.45,1.59-1.89.74-.44,1.74-.66,3.01-.66s2.29.22,3.04.66c.74.44,1.28,1.07,1.6,1.89.32.82.48,1.82.48,2.99v6.29c0,.79-.07,1.51-.22,2.15-.15.64-.38,1.2-.71,1.67s-.76.85-1.31,1.13c.18.2.37.39.56.57.19.19.39.36.58.52.19.16.39.29.58.39l-.79,2.21ZM72.81,22.63c.39,0,.68-.1.86-.29s.3-.45.36-.75c.05-.31.08-.62.08-.94v-8.14c0-.33-.03-.65-.08-.95-.06-.3-.17-.55-.36-.74-.18-.19-.47-.29-.86-.29s-.67.1-.85.29c-.17.2-.29.44-.33.74-.05.3-.07.62-.07.95v8.14c0,.32.02.63.07.94.05.31.16.56.33.75s.46.29.85.29Z"/>
+                      <path class="cls-1" d="M85.09,25.28c-1.29,0-2.31-.21-3.04-.64-.73-.42-1.24-1.04-1.54-1.86-.29-.81-.44-1.81-.44-3v-11.67h3.7v12.24c0,.35.03.7.08,1.04.06.35.18.63.37.86.19.22.48.33.87.33s.7-.11.88-.33.3-.51.34-.86c.05-.35.07-.7.07-1.04v-12.24h3.72v11.67c0,1.18-.15,2.18-.45,3-.3.81-.81,1.43-1.54,1.86-.72.42-1.73.64-3.03.64Z"/>
+                      <path class="cls-1" d="M92.48,25.03V8.12h7.6v2.55h-3.86v4.2h2.94v2.59h-2.94v5.05h3.91v2.53h-7.64Z"/>
+                      <path class="cls-1" d="M103.34,25.03v-14.14h-2.55v-2.78h8.83v2.78h-2.53v14.14h-3.76Z"/>
+                      <path class="cls-1" d="M110.82,25.03v-3.22h3.22v3.22h-3.22Z"/>
+                      <path class="cls-1" d="M116.23,25.03V8.12h3.74v16.92h-3.74Z"/>
+                      <path class="cls-1" d="M122.49,25.03V8.12h4.28c1.48,0,2.62.18,3.45.55.82.37,1.4.95,1.73,1.73.33.79.5,1.81.5,3.06v6.14c0,1.27-.17,2.3-.5,3.1-.33.8-.91,1.39-1.72,1.76s-1.95.56-3.41.56h-4.32ZM126.23,22.44h.58c.57,0,.98-.08,1.23-.25.25-.17.41-.42.47-.75.06-.33.09-.75.09-1.25v-7.37c0-.5-.04-.9-.12-1.21-.08-.31-.24-.53-.49-.67-.25-.14-.66-.21-1.21-.21h-.56v11.72Z"/>
+                    </g>
+                    <g id="pelotaBasquetId">
+                      <g>
+                        <path class="cls-2" d="M10.77,13.51s-.05,0-.08.01h0s.08-.01.08-.01Z"/>
+                        <path class="cls-2" d="M12.82,13.51h-.09.09Z"/>
+                      </g>
+                      <g>
+                        <g>
+                          <path class="cls-2" d="M.02,29.82s-.01.03-.01.05c-.01-.02-.01-.03-.01-.04t.02-.01Z"/>
+                          <path class="cls-2" d="M23.49,29.87s-.01-.02-.01-.03h.01v.03Z"/>
+                        </g>
+                        <g>
+                          <path class="cls-2" d="M12.73,13.52s.06,0,.08.01h0s-.08-.01-.08-.01ZM10.68,13.52h.08-.08Z"/>
+                          <g>
+                            <path class="cls-2" d="M23.49,29.87s-.01-.02-.01-.03h.01v.03Z"/>
+                            <path class="cls-2" d="M.01,29.87s-.01-.03-.01-.04t.02-.01s-.01.03-.01.05Z"/>
+                          </g>
+                          <g>
+                            <path class="cls-2" d="M23.49,29.87s-.01-.02-.01-.03h.01v.03Z"/>
+                            <g>
+                              <path class="cls-2" d="M.02,29.82s-.01.03-.01.05c-.01-.02-.01-.03-.01-.04t.02-.01Z"/>
+                              <path class="cls-2" d="M19.6,17.46c1.76,1.49,3.11,3.49,3.79,5.76V0h-7.42c0,1.89-1.53,3.43-3.42,3.43s-3.42-1.54-3.42-3.43H.11v23.23c.67-2.27,2.01-4.26,3.78-5.76.79.71,1.43,1.6,1.86,2.58h-.01c-2.28,1.04-4.2,2.66-5.62,4.65v4.81c.93-3.2,3.16-5.85,6.15-7.35.01.21.02.43.02.64,0,3.6-2.7,6.58-6.18,7.02v2.15c.21-.02.41-.06.64-.09,4.34-.75,7.67-4.53,7.67-9.08,0-.49-.04-.98-.11-1.46.78-.24,1.56-.38,2.37-.45v11.08h2.13v-11.08c.79.07,1.57.2,2.33.43h0c-.08.49-.13.98-.13,1.48,0,4.57,3.36,8.38,7.74,9.09.2.04.41.07.63.08v-2.14c-3.52-.44-6.24-3.42-6.24-7.03,0-.22.01-.44.04-.66,1.5.75,2.82,1.78,3.87,3.03,1.07,1.25,1.86,2.72,2.33,4.33v-4.81c-1.43-2-3.36-3.61-5.66-4.66.41-1.01,1.05-1.88,1.87-2.57ZM10.68,18.76c-.99.07-1.99.25-2.95.52-.49-1.16-1.18-2.2-2.07-3.07,1.5-.88,3.21-1.43,5.02-1.59v4.13ZM10.68,13.53h0s.08-.01.08-.01c-.02,0-.05,0-.08.01ZM12.73,13.52h.08-.08ZM15.73,19.28c-.95-.28-1.92-.45-2.91-.52v-4.13c1.81.15,3.49.71,4.98,1.56-.89.88-1.59,1.93-2.07,3.09Z"/>
+                            </g>
+                          </g>
+                          <g>
+                            <path class="cls-2" d="M10.77,13.51s-.05,0-.08.01h0s.08-.01.08-.01Z"/>
+                            <path class="cls-2" d="M12.82,13.51h-.09.09Z"/>
+                          </g>
+                        </g>
+                      </g>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+            </div>
+          </a>
+        </article>
         <!-- Noticias -->
         <article class="article22 d-flex mt-4 mb-4 flex-column align-items-center p-0">
           <div class="d-flex justify-content-center mb-3">
