--- a/pages/club.html
+++ b/pages/club.html
@@ -42,6 +42,8 @@
       </nav>
     </header>
     <main class="mainClub">
+      <!-- Contenedor "Separador" -->
+      <div class="contenedorSeparador"></div>
       <section class="container-fluid d-flex flex-column align-items-center">
         <h1 class="mb-3 mt-3">Club</h1>
         <div class="col-12">
