--- a/pages/estadios.html
+++ b/pages/estadios.html
@@ -42,6 +42,8 @@
       </nav>
     </header>
     <main class="container-fluid d-flex flex-column align-items-center mainEstadios p-0">
+      <!-- Contenedor "Separador" -->
+      <div class="contenedorSeparador"></div>
       <div>
         <h1>Estadios</h1>
       </div>
