--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -43,6 +43,8 @@
       </nav>
     </header>
     <main class="container-fluid d-flex flex-column align-items-center mt-2 p-0">
+      <!-- Contenedor "Separador" -->
+      <div class="contenedorSeparador"></div>
       <h1 class="mt-3 mb-3">Noticias</h1>
       <!-- Botonera Filtros -->
       <div class="container-fluid d-flex justify-content-evenly mt-3 mb-3 p-0">
