--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -174,7 +174,7 @@
               <h3>Datos:</h3>
               <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: José Peralta</h5>
-                <h5 class="mt-1 mb-1">Edad: 28</h5>
+                <h5 class="mt-1 mb-1">Edad: 29</h5>
                 <h5 class="mt-1 mb-1">Altura: 2.04m</h5>
                 <h5 class="mt-1 mb-1">Posición: Ala Pivot</h5>
               </div>
@@ -252,7 +252,7 @@
               <h3>Datos:</h3>
               <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: Santiago Assum</h5>
-                <h5 class="mt-1 mb-1">Edad: 25</h5>
+                <h5 class="mt-1 mb-1">Edad: 26</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.90m</h5>
                 <h5 class="mt-1 mb-1">Posición: Escolta</h5>
               </div>
@@ -278,7 +278,7 @@
               <h3>Datos:</h3>
               <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: Ricardo Fernandez</h5>
-                <h5 class="mt-1 mb-1">Edad: 27</h5>
+                <h5 class="mt-1 mb-1">Edad: 28</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.90m</h5>
                 <h5 class="mt-1 mb-1">Posición: Alero</h5>
               </div>
@@ -304,7 +304,7 @@
               <h3>Datos:</h3>
               <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: José Allub</h5>
-                <h5 class="mt-1 mb-1">Edad: 20</h5>
+                <h5 class="mt-1 mb-1">Edad: 21</h5>
                 <h5 class="mt-1 mb-1">Altura: 2.02m</h5>
                 <h5 class="mt-1 mb-1">Posición: Alero</h5>
               </div>
@@ -312,7 +312,7 @@
           </div>
         </article>
         <!-- Jugador 11 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -408,7 +408,7 @@
               <h3>Datos:</h3>
               <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: Simón Cisneros</h5>
-                <h5 class="mt-1 mb-1">Edad: 17</h5>
+                <h5 class="mt-1 mb-1">Edad: 18</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.80m</h5>
                 <h5 class="mt-1 mb-1">Posición: Base</h5>
               </div>
@@ -416,7 +416,7 @@
           </div>
         </article>
         <!-- Jugador 15 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
