--- a/pages/asociate.html
+++ b/pages/asociate.html
@@ -195,9 +195,7 @@
     ></script>
     <script type="text/javascript">
       (function () {
-        emailjs.init({
-          publicKey: "WyWd-bVduiW2PhE6s",
-        });
+        emailjs.init("S-tLBA6nNufGB2SDP");
       })();
     </script>
     <script src="../js/formulario.js"></script>
