--- a/pages/club.html
+++ b/pages/club.html
@@ -169,10 +169,10 @@
                 <img src="../media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
               </a>
             </div>
-            <!-- Liga Argentina -->
+            <!-- Liga Nacional -->
             <div class="col d-flex justify-content-center">
-              <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                <img src="../media/img19_preview_rev_1.png" alt="Logo Liga Argentina de Basquet" class="logosLigas"/>
+              <a href="https://www.laliganacional.com.ar/laliga/" target="blank">
+                <img src="../media/Logo_LNB.png" alt="Logo Liga Nacional de Basquet" class="logosLigas"/>
               </a>
             </div>
           </div>
@@ -227,10 +227,10 @@
                   <img src="../media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
                 </a>
               </div>
-              <!-- Liga Argentina -->
+              <!-- Liga Nacional -->
               <div class="col p-0 my-2 d-flex justify-content-center">
-                <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                  <img src="../media/img19_preview_rev_1.png" alt="Logo Liga Chivilcoyana de Basquet" class="logosLigas"/>
+                <a href="https://www.laliganacional.com.ar/laliga/" target="blank">
+                  <img src="../media/Logo_LNB.png" alt="Logo Liga Nacional de Basquet" class="logosLigas"/>
                 </a>
               </div>
             </div>
