--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -52,7 +52,7 @@
       <section class="container-fluid d-flex flex-column flex-md-row p-0 sectionPlantel">
         <div class="row w-100 justify-content-evenly m-0">
         <!-- Jugador 1 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -70,7 +70,7 @@
               <h3>Datos:</h3>
               <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: Alejo Barrales</h5>
-                <h5 class="mt-1 mb-1">Edad: 33</h5>
+                <h5 class="mt-1 mb-1">Edad: 34</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.73m</h5>
                 <h5 class="mt-1 mb-1">Posición: Base</h5>
               </div>
@@ -78,7 +78,7 @@
           </div>
         </article>
         <!-- Jugador 2 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -96,7 +96,7 @@
               <h3>Datos:</h3>
               <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: Nehuén Alvite</h5>
-                <h5 class="mt-1 mb-1">Edad: 23</h5>
+                <h5 class="mt-1 mb-1">Edad: 24</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.88m</h5>
                 <h5 class="mt-1 mb-1">Posición: Base</h5>
               </div>
@@ -104,7 +104,7 @@
           </div>
         </article>
         <!-- Jugador 3 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -122,7 +122,7 @@
               <h3>Datos:</h3>
               <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: Luciano Ortiz</h5>
-                <h5 class="mt-1 mb-1">Edad: 26</h5>
+                <h5 class="mt-1 mb-1">Edad: 27</h5>
                 <h5 class="mt-1 mb-1">Altura: 2.00m</h5>
                 <h5 class="mt-1 mb-1">Posición: Ala Pivot</h5>
               </div>
@@ -130,7 +130,7 @@
           </div>
         </article>
         <!-- Jugador 4 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -148,7 +148,7 @@
               <h3>Datos:</h3>
               <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: Juan Conte Grand</h5>
-                <h5 class="mt-1 mb-1">Edad: 22</h5>
+                <h5 class="mt-1 mb-1">Edad: 23</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.91m</h5>
                 <h5 class="mt-1 mb-1">Posición: Escolta</h5>
               </div>
@@ -156,7 +156,7 @@
           </div>
         </article>
         <!-- Jugador 5 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -182,7 +182,7 @@
           </div>
         </article>
         <!-- Jugador 6 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -200,7 +200,7 @@
               <h3>Datos:</h3>
               <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: Abraham Barahona</h5>
-                <h5 class="mt-1 mb-1">Edad: 21</h5>
+                <h5 class="mt-1 mb-1">Edad: 22</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.95m</h5>
                 <h5 class="mt-1 mb-1">Posición: Ala Pivot</h5>
               </div>
@@ -208,7 +208,7 @@
           </div>
         </article>
         <!-- Jugador 7 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -226,7 +226,7 @@
               <h3>Datos:</h3>
               <div class="d-flex flex-column text-center">
                 <h5 class="mt-1 mb-1">Nombre y Apellido: Emilio Stucky</h5>
-                <h5 class="mt-1 mb-1">Edad: 30</h5>
+                <h5 class="mt-1 mb-1">Edad: 31</h5>
                 <h5 class="mt-1 mb-1">Altura: 1.98m</h5>
                 <h5 class="mt-1 mb-1">Posición: Ala Pivot</h5>
               </div>
@@ -234,7 +234,7 @@
           </div>
         </article>
         <!-- Jugador 8 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -260,33 +260,7 @@
           </div>
         </article>
         <!-- Jugador 9 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
-          <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
-            <div class="col-6 d-flex justify-content-center">
-              <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="../media/Plantel/fernandez1.jpg" class="d-block w-100" alt="Estadio Norte - Frente">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../media/Plantel/fernandez2.jpg" class="d-block w-100" alt="Estadio Norte - Frente">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-6 d-flex flex-column text-center">
-              <h3>Datos:</h3>
-              <div class="d-flex flex-column text-center">
-                <h5 class="mt-1 mb-1">Nombre y Apellido: Ricardo Fernandez</h5>
-                <h5 class="mt-1 mb-1">Edad: 28</h5>
-                <h5 class="mt-1 mb-1">Altura: 1.90m</h5>
-                <h5 class="mt-1 mb-1">Posición: Alero</h5>
-              </div>
-            </div>
-          </div>
-        </article>
-        <!-- Jugador 10 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -311,34 +285,8 @@
             </div>
           </div>
         </article>
-        <!-- Jugador 11 -->
+        <!-- Jugador 10 -->
         <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
-          <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
-            <div class="col-6 d-flex justify-content-center">
-              <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="../media/Plantel/capurro1.jpg" class="d-block w-100" alt="Estadio Norte - Frente">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../media/Plantel/capurro2.jpg" class="d-block w-100" alt="Estadio Norte - Frente">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-6 d-flex flex-column text-center">
-              <h3>Datos:</h3>
-              <div class="d-flex flex-column text-center">
-                <h5 class="mt-1 mb-1">Nombre y Apellido: Joaquín Capurro</h5>
-                <h5 class="mt-1 mb-1">Edad: 19</h5>
-                <h5 class="mt-1 mb-1">Altura: 1.88m</h5>
-                <h5 class="mt-1 mb-1">Posición: Escolta</h5>
-              </div>
-            </div>
-          </div>
-        </article>
-        <!-- Jugador 12 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -363,8 +311,8 @@
             </div>
           </div>
         </article>
-        <!-- Jugador 13 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <!-- Jugador 11 -->
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -389,8 +337,8 @@
             </div>
           </div>
         </article>
-        <!-- Jugador 14 -->
-        <article class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
+        <!-- Jugador 12 -->
+        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
           <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
             <div class="col-6 d-flex justify-content-center">
               <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
@@ -415,33 +363,6 @@
             </div>
           </div>
         </article>
-        <!-- Jugador 15 -->
-        <article hidden class="col-lg-3 col-md-4 col-sm-5 col-10 p-0 articlePlantel my-2 mx-2">
-          <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
-            <div class="col-6 d-flex justify-content-center">
-              <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500" data-bs-pause="false">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="../media/Plantel/conca1.jpg" class="d-block w-100" alt="Estadio Norte - Frente">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../media/Plantel/conca2.jpg" class="d-block w-100" alt="Estadio Norte - Frente">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-6 d-flex flex-column text-center">
-              <h3>Datos:</h3>
-              <div class="d-flex flex-column text-center">
-                <h5 class="mt-1 mb-1">Nombre y Apellido: Francisco Conca</h5>
-                <h5 class="mt-1 mb-1">Edad: 19</h5>
-                <h5 class="mt-1 mb-1">Altura: 2.06m</h5>
-                <h5 class="mt-1 mb-1">Posición: Pivot</h5>
-              </div>
-            </div>
-          </div>
-        </article>
-        </div>
       </section>
     </main>
     <footer>
@@ -499,10 +420,10 @@
                 <img src="../media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
               </a>
             </div>
-            <!-- Liga Argentina -->
+            <!-- Liga Nacional -->
             <div class="col d-flex justify-content-center">
-              <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                <img src="../media/img19_preview_rev_1.png" alt="Logo Liga Argentina de Basquet" class="logosLigas"/>
+              <a href="https://www.laliganacional.com.ar/laliga/" target="blank">
+                <img src="../media/Logo_LNB.png" alt="Logo Liga Nacional de Basquet" class="logosLigas"/>
               </a>
             </div>
           </div>
@@ -557,10 +478,10 @@
                   <img src="../media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
                 </a>
               </div>
-              <!-- Liga Argentina -->
+              <!-- Liga Nacional -->
               <div class="col p-0 my-2 d-flex justify-content-center">
-                <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                  <img src="../media/img19_preview_rev_1.png" alt="Logo Liga Chivilcoyana de Basquet" class="logosLigas"/>
+                <a href="https://www.laliganacional.com.ar/laliga/" target="blank">
+                  <img src="../media/Logo_LNB.png" alt="Logo Liga Nacional de Basquet" class="logosLigas"/>
                 </a>
               </div>
             </div>
