--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -47,13 +47,14 @@
       <div class="contenedorSeparador"></div>
       <h1 class="mt-3 mb-3">Noticias</h1>
       <!-- Botonera Filtros -->
-      <div class="container-fluid d-flex justify-content-evenly mt-3 mb-3 p-0">
-        <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1 filtroActivo" onclick="filtrarNoticias('todas')">Todas</button>
-        <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1" onclick="filtrarNoticias('categoriaI')">Inferiores</button>
-        <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1" onclick="filtrarNoticias('categoriau19')">U 19</button>
-        <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1" onclick="filtrarNoticias('categoriau21')">U 21</button>
-        <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1" onclick="filtrarNoticias('categoriaP')">Primera Local</button>
-        <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1" onclick="filtrarNoticias('categoriaLA')">Liga Argentina</button>
+      <div class="container-fluid d-flex flex-wrap justify-content-evenly justify-content-center-sm mt-3 mb-3 p-0">
+        <button class="btn btn-sm btn-custom botonVerMas m-1 filtroActivo" onclick="filtrarNoticias('todas')">Todas</button>
+        <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriaI')">Inferiores</button>
+        <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriau19')">U 19</button>
+        <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriau21')">U 21</button>
+        <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriaP')">Primera Local</button>
+        <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriaLA')">Liga Argentina</button>
+        <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriaLN')">Liga Nacional</button>
       </div>
       <section class="container-fluid row align-items-center p-0 contenedorNoticias" id="contenedorNoticias">
       </section>
@@ -113,10 +114,10 @@
                 <img src="../media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
               </a>
             </div>
-            <!-- Liga Argentina -->
+            <!-- Liga Nacional -->
             <div class="col d-flex justify-content-center">
-              <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                <img src="../media/img19_preview_rev_1.png" alt="Logo Liga Argentina de Basquet" class="logosLigas"/>
+              <a href="https://www.laliganacional.com.ar/laliga/" target="blank">
+                <img src="../media/Logo_LNB.png" alt="Logo Liga Nacional de Basquet" class="logosLigas"/>
               </a>
             </div>
           </div>
@@ -171,10 +172,10 @@
                   <img src="../media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
                 </a>
               </div>
-              <!-- Liga Argentina -->
+              <!-- Liga Nacional -->
               <div class="col p-0 my-2 d-flex justify-content-center">
-                <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                  <img src="../media/img19_preview_rev_1.png" alt="Logo Liga Chivilcoyana de Basquet" class="logosLigas"/>
+                <a href="https://www.laliganacional.com.ar/laliga/" target="blank">
+                  <img src="../media/Logo_LNB.png" alt="Logo Liga Nacional de Basquet" class="logosLigas"/>
                 </a>
               </div>
             </div>
