--- a/pages/productos.html
+++ b/pages/productos.html
@@ -46,8 +46,11 @@
       <div class="container-fluid d-flex justify-content-center mb-3 mt-3">
         <h1>Productos</h1>
       </div>
-      <div class="container-fluid d-flex justify-content-center text-center p-0">
-        <h4 class="col-12 col-md-8">Para poder adquirir alguno de los productos podes comunicarte a racingchivilcoybasquet@gmail.com</h4> 
+      <div class="container-fluid d-flex flex-column justify-content-center align-items-center text-center p-0 mb-2">
+        <h4 class="col-12 col-md-8">Para poder adquirir alguno de los productos podes comunicarte al MD del Instagram</h4>
+        <a target="_blank" href="https://www.instagram.com/tiendaracingchivilcoy/" class="linkATienda">
+          <h2 class="fondoTexto">@tiendaracingchivilcoy</h2>
+        </a> 
       </div>
       <section class="row align-items-center justify-content-evenly" id="contenedorProductos">
       </section>
@@ -107,10 +110,10 @@
                 <img src="../media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
               </a>
             </div>
-            <!-- Liga Argentina -->
+            <!-- Liga Nacional -->
             <div class="col d-flex justify-content-center">
-              <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                <img src="../media/img19_preview_rev_1.png" alt="Logo Liga Argentina de Basquet" class="logosLigas"/>
+              <a href="https://www.laliganacional.com.ar/laliga/" target="blank">
+                <img src="../media/Logo_LNB.png" alt="Logo Liga Nacional de Basquet" class="logosLigas"/>
               </a>
             </div>
           </div>
@@ -165,10 +168,10 @@
                   <img src="../media/img18_preview_rev_1.png" alt="Logo Liga Bonaerense de Basquet" class="logosLigas"/>
                 </a>
               </div>
-              <!-- Liga Argentina -->
+              <!-- Liga Nacional -->
               <div class="col p-0 my-2 d-flex justify-content-center">
-                <a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank">
-                  <img src="../media/img19_preview_rev_1.png" alt="Logo Liga Chivilcoyana de Basquet" class="logosLigas"/>
+                <a href="https://www.laliganacional.com.ar/laliga/" target="blank">
+                  <img src="../media/Logo_LNB.png" alt="Logo Liga Nacional de Basquet" class="logosLigas"/>
                 </a>
               </div>
             </div>
