--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           </div>
           <!-- Fixture Completo-->
           <div class="modal fade" id="miModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-xl custom-modal-width">
+            <div hidden class="modal-dialog modal-xl custom-modal-width">
               <div class="modal-content">
                 <div class="modal-header">
                   <h2 class="modal-title" id="modalLabel">Fixture</h2>
