--- a/pages/club.html
+++ b/pages/club.html
@@ -50,65 +50,83 @@
             <div class="">
                 <img src="../media/Plantel/plantelCompleto.jpg" class="col-12 col-md-6 float-end mb-2 ms-2 mb-md-3 ms-md-3 p-0 imagenClub" alt="...">
                 <p class="parrafoClub">
-                  Un <b>9 de julio de 1914 en la esquina de Maipu y Juramento nacía el Racing Club de Chivilcoy</b>, por el accionar de un grupo de jóvenes hinchas de los albicelestes de Avellaneda, entre ellos Francisco Vachino, primer presidente y quien cedió una habitación familiar para lograr plasmar esta idea. 
-                  A lo largo de estos 110 años han pasado muchas personas, familias y hechos relacionados a la vida institucional que marcan a fuego cada paso de esta historia, los más sobresalientes hasta llegar hoy adonde estamos, en una línea resumida del tiempo, son: <br>
-                  ◦ <b>1914</b> los fundadores integrantes de la primera comisión directiva se reunían en casa de los Vachino. Ellos fueron: Ballerini, Bacigaluppo, Alem, Alfonso, Meretta, Gnochi, Naberbury y Vera. La camiseta original tenía fondo rojo con rayas verticales verdes. En ese año se formaba el primer equipo de fútbol. <br>
-                  ◦ <b>1915</b> Racing consigue su primera copa deportiva, que aún hoy luce orgullosamente en nuestras vitrinas para las generaciones venideras. <br>
-                  ◦ <b>1918</b> se logra el primer campeonato de fútbol local. <br>
-                  ◦ <b>1919</b> continúan los triunfos en el fútbol y comienza la actividad social, en ese año se organizan los primero bailes populares. <br>
-                  ◦ <b>1920</b> aparece el seminario deportivo-literario, una conquista de la época. <br>
-                  ◦ <b>1921</b> se inaugura la primera biblioteca, y también se realiza la primera rifa para recaudar fondos necesarios. <br>
-                  ◦ <b>1922</b> la provincia de Buenos Aires distingue a nuestro primer equipo con brazalete de honor. <br>
-                  ◦ <b>1925</b> el socio Vicente Perito dedica a la institución la “polka sportiva” Racing club, que hace distinción de nuestra institución. <br>
-                  ◦ <b>1931</b> comienza la colaboración con la Doble Chivilcoy, organizada por el Club Ciclista Chivilcoy (hoy Doble Bragado), competencia que hasta mediados de la década del ‘80 llegó hasta nuestra sede. <br>
-                  ◦ <b>1935</b> después de mucho tiempo de arduo trabajo, se inaugura la primera cancha de basquetbol en el predio de la calle Alsina. <br>
-                  ◦ <b>1936</b> se alcanza el primer campeonato de la era de la Federacion de Chivilcoy. Después de este la institución decide abundar la disciplina. <br>
+                  Un <b>9 de julio de 1914</b>, en la esquina de Maipú y Juramento, nacía Racing Club de Chivilcoy. Un grupo de jóvenes apasionados por Racing de Avellaneda, liderados por <b>Francisco Vachino</b>, dio el puntapié inicial a esta gran historia. Vachino fue el primer presidente, y hasta cedió una habitación de su casa para que ese sueño tomara forma.<br/><br/>
+
+                  Lo que empezó como un deseo compartido se convirtió, con el paso del tiempo, en una <b>institución fundamental para la vida deportiva, social y cultural de Chivilcoy.</b><br/><br/>
+
+                  Primeros pasos<br/>
+                  En 1914, <b>se forma el primer equipo de fútbol</b> y se diseña la camiseta original (roja con rayas verdes).<br/><br/>
+
+                  1915 trae el primer trofeo, aún exhibido con orgullo.<br/><br/>
+
+                  Durante las décadas siguientes, Racing organiza bailes populares, rifas, crea una biblioteca y un seminario deportivo-literario.<br/><br/>
+
+                  A partir de 1931, colabora con la tradicional Doble Chivilcoy, y en 1935 <b>se inaugura la primera cancha de básquet</b> en el predio de calle Alsina.<br/><br/>
+
+                  En 1941, se compra el terreno donde hoy sigue funcionando el club.<br/><br/>
+
+                  Un club con identidad<br/>
+                  Durante las décadas del 40 y 50, <b>Racing se consolida como un espacio que mezcla deporte, cultura y comunidad.</b> Se suman actividades teatrales, carnavales, torneos de baby fútbol y grandes bailes en “El Rancho Grande”.<br/><br/>
                 </p>
                 <p class="parrafoClub">
-                  ◦ <b>1937</b> la pareja de pelotaris racinguista Rampazzi - Garrido es finalista en el torneo de la Provincia de Buenos Aires.  <br>
-                  ◦ <b>1939</b> Comienza la entrega de documentación para la Personeria Jurídica.  <br>
-                  ◦ <b>1940</b> Se conforma  elenco de teatro de la institución, dirigido de L. Meretta.  <br>
-                  ◦ <b>1941</b> Bajo la presidencia del arquitecto Gustavo Correa, se compra el predio de Alsina y Av Soares donde hoy fu no nos nuestro club. Llega la Personeria Jurídica gestionada desde tiempo antes.  <br>
-                  ◦ <b>1943</b> Racing organiza un extraordinario baile popular para los carnavales, con gran éxito.  <br>
-                  ◦ <b>1945</b> Racing Club es campeón invicto de baby fútbol.  <br>
-                  ◦ <b>1947</b> Regresa a la institución la actividad teatral, para cubrir una necesidad social del momento.  <br>
-                  ◦ <b>1949</b> Se prepara el gran salón social, denominado El Rancho Grande, donde siguen los éxitos bailables.  <br>
-                  ◦ <b>1950</b> Época de grandes bailes. Sigue sonando más público a la vida teatral.  <br>
-                  ◦ <b>1952</b> Con un gran equipo, Racing triunfa en el Campeonato Chivilcoyano de Básquetbol.  <br>
-                  ◦ <b>1953</b> El Club Ciclista Bacion nos honra con la llegada de una importante etapa de la Doble de Bragado. En el Club se atiende a todos los competidores y organizadores.  <br>
-                  ◦ <b>1954</b> Se inicia la construcción del primer natatorio, obra dirigida por el arquitecto Gustavo Correa.  <br>
+                  En 1955, <b>se inaugura la pileta, y a lo largo de los años se destacan logros en básquet, fútbol y hasta en casin.</b><br/><br/>
+
+                  Momentos difíciles, respuestas gigantes<br/>
+                  En 1967, <b>Racing atraviesa una fuerte crisis que desemboca en el remate del club.</b> Pero ahí aparece el corazón racinguista: <b>Julio Cánepa, socio de la institución, lo compra en el acto... y lo dona. Un gesto que salvó al club y marcó para siempre su historia.</b><br/><br/>
+
+                  Crecimiento deportivo y social<br/>
+                  Desde entonces, <b>Racing no paró de crecer.</b><br/><br/>
+
+                  En los 70 y 80, <b>el básquet vive un verdadero boom, con figuras como Ernesto “Tito” Rambozzi y una seguidilla de títulos inolvidables.</b><br/><br/>
+
+                  Se suman artes marciales, natación climatizada y los clásicos corsos que llenaban las calles de color.<br/><br/>
+
+                  En 1986, se inaugura el Estadio Norte, y en 1989, <b>Racing participa por primera vez en la Liga Nacional B.</b><br/><br/>
+
+                  Una institución en movimiento<br/>
+                  A partir de los 90, se incorpora el hockey sobre césped, se construye el gimnasio y se renueva el natatorio.<br/><br/>
+
+                  En 2006, <b>Racing adquiere un campo de deportes, se amplía la infraestructura y se realizan obras clave para modernizar sus instalaciones.</b><br/><br/>
                 </p>
                 <img src="../media/Plantel/cuerpoTecnico.jpg" class="col-12 col-md-6 float-start mb-2 me-2 mb-md-3 me-md-3 p-0 imagenClub" alt="...">
                 <p class="parrafoClub">
-                  ◦ <b>1955</b> Se inaugura la pileta de natación. <br>
-                  ◦ <b>1960</b> Racing Club Chivilcoy se convierte en sede del Campeonato Argentino de Casin. Fue elegido por reunir las condiciones y por la forma de practicar ese deporte. Que contaba con grandes jugadores locales. <br>
-                  ◦ <b>1964</b> Se inicia la construcción de 2009 metros cuadrados para la sede social. <br>
-                  ◦ <b>1967</b> año muy triste para Racing. Por inconvenientes con una de las grandes rifas en boga de esa época, se llega al remate del club. El socio Julio Canepa lo compra, e inmediatamente dona el predio a la institución. <br>
-                  ◦ <b>1973</b> Periodo de esplendor del básquetbol, con un poderoso equipo liderado por Ernesto Tito Rambozzi y un sinfín de títulos. <br>
-                  ◦ <b>1974</b> Se suman las artes marciales, a través del Judo, con el maestro japonés Hiroya Wasa. La práctica continuara hasta 1980. <br>
-                  ◦ <b>1982</b> Vuelven los carnavales, organizados por el club, con participación de gente de distintas ciudades de la provincia. <br>
-                  ◦ <b>1983</b> Éxito de los corsos de Racing Club. Se inaugura la primera pileta climatizada. <br>
-                  ◦ <b>1984</b> Se afianzan los corsos; llegan a la ciudad comparsas correntinas y entrerianas. <br>
-                  ◦ <b>1986</b> festejo del 72 aniversario con la inauguración del Estadio Norte, techado. Única su actividad en la liga nacional de clubes. <br>
-                  ◦ ⁠<b>1987</b> llega el Jarate a Racing, de la mano de Dauria. Hoy continúa en constante crecimiento con Daniel Lavagnino. <br>
-                  ◦ ⁠⁠<b>1989</b> El básquetbol logra su mayor sueño: la participación en la Liga Nacional B de primera división. <br>
+                  En 2010, <b>un incendio destruye parte del Estadio Norte. Pero como tantas veces, el club se levanta con el apoyo de su gente y sigue adelante.</b><br/><br/>
+
+                  2015–2025: Una década de transformación<br/>
+                  Con <b>Joaquín Oteiza como presidente, Racing vive una etapa marcada por obras concretas, inclusión social y logros deportivos.</b><br/><br/>
+
+                  Obras y mejoras<br/>
+                  <b>Cancha de hockey sintética</b>, finalizada gracias al trabajo conjunto con la subcomisión y apoyo de empresas y vecinos.<br/><br/>
+
+                  Renovación total de la pileta chica y vestuarios nuevos para mejorar la experiencia de socios y deportistas.<br/><br/>
+
+                  Construcción del Salón Azul, pensado como un espacio social, con cocina y depósito incluido.</b><br/><br/>
+
+                  Remodelación total del <b>Estadio Norte, hoy llamado Julio César Nicieza, con nuevo piso flotante, luminarias y accesos renovados.</b><br/><br/>
+
+                  Alianzas y convenios que marcan<br/>
+                  El <b>Grilon Arena, estadio de básquet construido junto a Club Independiente, permitió a Racing competir en la Liga Argentina (segunda categoría del país).</b><br/><br/>
+
+                  En 2023, se firmó un <b>convenio con PAMI, que permitió a más de 300 jubilados realizar actividades en el club.</b><br/><br/>
                 </p>
                 <p class="parrafoClub">
-                  ◦ <b>⁠1995</b> se incorpora la práctica del Hockey sobre césped, feliz y positiva iniciativa. <br>
-                  ◦ <b>⁠1997</b> después de mucho tiempo y trabajo, se inaugura el gimnasio en el subsuelo. <br>
-                  ◦ <b>⁠2001</b> Se reinaugura la pileta climatizada, con una nueva estructura que la cubre, bajo la presidencia de Hugo Ventieri. <br>
-                  ◦ <b>2001</b>⁠La Categoría Pre infantiles alcanza el tercer puesto en el torneo de Asociación de Básquetbol de Chivilcoy. <br>
-                  ◦ <b>⁠2003</b> El Básquetbol logra el Subcampeonato de Preinfanriles, y los Campeonatos Apertura y Clausura en Infantivles. se consagra campeón del año y es la única institución que alcanz estos galardones. <br>
-                  ◦ <b>⁠2004</b> Se termina la tan ansiada obra sobre calle Alsina, se reacondicona la sala de karate (subsuelo) y se termina el piso del gimnasio. <br>
-                  ◦ <b>2005</b> Se amplía y modifica el buffet, dotándolo de las comodidades necesarias para un buen desenvolvimiento. <br>
-                  ◦ <b>⁠2006</b> El 13 de octubre se concreta una de las metas más soñadas: la adquisición de la quinta para el futuro campo de deportes. <br>
-                  ◦ <b>⁠2007</b> el gobierno nacional otorga un subsidio para construir el salón multiuoso. Tiene mucho que ver la gestión un ex presidente de Racing, el arquitecto Luis Bontempo. <br>
-                  ◦ ⁠<b>2008</b> Conienzan los trabajos en el campo de deportes. Se refacciona la casa existente y se realizan las tareas de desmonte y nivelación del terreno. Se trabaja en el sistema de calefacción del batatorio, vestuario, salón multiuso, filtros de agua y calderas. <br>
-                  ◦ <b>⁠2009</b> Se coloca un alambrado olímpico en el campo de deportes. se integra a Chivilcoy Rugby Club para representar a la institución en este deporte. se suscribes un comodato con la Dirección General de Cultura y Educación bonaerense, para que el centro de educación física N 12 utilice el natatorio. <br>
-                </p>
-                <p class="parrafoClub">
-                  ◦ <b>2010</b> Se termina el salón multiuso, que se inaugura el 7 de agosto. el momento de alegría termina el 8 de agosto cuando el Estadio Norte sufre un incendio, con pérdidas totales de instalación eléctrica, daños e paredes y parte del archivo, tribunas quemadas, vidrios rotos y problemas en el piso, que es especial para la práctica de básquet. La provincia de Buenos Aires otorga un subsidio de $60.000c. Se regulariza la deuda con AFIP. Se ilumina la cancha del campo de deportes. <br>
-                  ◦ <b>⁠2011</b> Contruccion de vestuarios en el campo de deportes. Se realiza un torneo de pelota palera en el cual intervienen campeones mundiales. Se inaugura el Jardín Maternal y el Jardín de Infantes. <br>
+                  También se firmó una <b>alianza con SportClub Argentina, la cadena de gimnasios más grande de Sudamérica, para ofrecer beneficios únicos a nuestros socios.</b><br/><br/>
+
+                  <b>El gran sueño: Racing en la Liga Nacional
+                  El 7 de junio de 2025, se concretó uno de los hitos más grandes en la historia del club:
+                  el equipo de básquet ascendió a la Liga Nacional, la máxima categoría del país.</b><br/><br/>
+
+                  Este logro fue mucho más que una victoria deportiva. <b>Fue la coronación de años de esfuerzo en inferiores, planificación dirigencial, obras estratégicas y un profundo compromiso con el crecimiento. Fue la confirmación de que Racing está más vivo que nunca.</b><br/>
+
+                  Y llegó justo a tiempo, <b>a un mes de cumplir 111 años, como si el destino mismo hubiera querido regalarle al club y a su gente esa alegría inolvidable.</b><br/><br/>
+
+                  Racing somos todos
+                  Hoy, <b>Racing Club Chivilcoy</b> es un club moderno, abierto, activo y con proyectos de futuro. Pero también es historia, pasión, identidad y comunidad.
+                  Un lugar donde se aprende, se sueña y se crece.
+                  Un lugar donde los valores del deporte son parte de la vida.<br/><br/>
+
+                  <b>Porque en Racing…<br/>
+                  los sueños no se archivan: se trabajan, se sienten y se viven.</b>
                 </p>
             </div>
         </div>
