--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -56,7 +56,7 @@
         <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriaLA')">Liga Argentina</button>
         <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriaLN')">Liga Nacional</button>
       </div>
-      <section class="container-fluid row align-items-center p-0 contenedorNoticias" id="contenedorNoticias">
+      <section class="container-fluid row align-items-center justify-content-evenly p-0 contenedorNoticias" id="contenedorNoticias">
       </section>
     </main>
     <footer>
