--- a/admin/backend.admin.html
+++ b/admin/backend.admin.html
@@ -340,6 +340,17 @@
                 <label class="btn btn-outline-primary" for="categoriaLN"
                   >Liga Nacional</label
                 >
+
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="btnradio"
+                  id="categoriaLP"
+                  autocomplete="off"
+                />
+                <label class="btn btn-outline-primary" for="categoriaLP"
+                  >Liga Próximo</label
+                >
               </div>
             </div>
             <div class="container-fluid text-center my-3">
