--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -55,6 +55,7 @@
         <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriaP')">Primera Local</button>
         <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriaLA')">Liga Argentina</button>
         <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriaLN')">Liga Nacional</button>
+        <button class="btn btn-sm btn-custom botonVerMas m-1" onclick="filtrarNoticias('categoriaLP')">Liga Próximo</button>
       </div>
       <section class="container-fluid row align-items-center justify-content-evenly p-0 contenedorNoticias" id="contenedorNoticias">
       </section>
